(header) fixed logo alignment

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -52,6 +52,7 @@
       text-align: center;
       font-size: 1.5rem;
       letter-spacing: 0.2rem;
+      margin-left: 0;
 
       @media (max-width: 47.99rem) {
         display: none;
